2008-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Yet one more place ymax -> ymax-1.

2008-04-05  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c (boundary): Missing cast to (int) for ytop.

2008-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary) src/color.c (draw_color_smooth_box):
	The coding guide for terminals in term/README clearly states:
	    xmax is the maximum number of points in the x direction.
	    The range of points used by gnuplot is 0 to xmax-1.
	The boundary calculations were instead scaling the right and top edges
	to term->xmax and term->ymax, so in the absence of margins these two
	border lines would lie off the edge of the plot.  This fix replaces
	term-xmax with term->xmax-1 in the boundary calculations, similarly for
	ymax. It does not work perfectly for terminals with down-sampling
	(wxt, cairo), but the previous code wasn't working either.
	Bug #1929002

2008-04-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c docs/gnuplot.doc: Change name from GPVAL_PI to GPVAL_pi

2008-04-01  Thomas Sefzick  <thse@users.sourceforge.net>

	* src/tables.c src/command.c (undefine_command) src/command.h
	docs/gnuplot.doc:  Introduce a new command 'undefine foo baz [...]'
	that clears previously defined user variables "foo", "baz", ...

2008-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_gpval_variables) docs/gnuplot.doc:  Users can
	clobber the pre-defined variables pi and NaN.  Provide permanent,
	non-clobberable versions GPVAL_PI and GPVAL_NaN so that they can be
	restored if necessary.

	* src/internal.c (f_assign):  Don't let the user assign new values to
	internal variables GPVAL_* and MOUSE_*.

2008-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars) docs/gnuplot.doc:  The docs state that if
	(close > open) then the candlestick is drawn with 3 vertical bars.  This